colcon_ws/log/build_2022-09-13_04-39-40/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:249:6: error: no declaration matches ‘void gatekeeper::Gatekeeper::publish_free_pcl()’
  249 | void Gatekeeper::publish_free_pcl() {
      |      ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:249:6: note: no functions named ‘void gatekeeper::Gatekeeper::publish_free_pcl()’
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:37:7: note: ‘class gatekeeper::Gatekeeper’ defined here
   37 | class Gatekeeper : public rclcpp::Node {
      |       ^~~~~~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
